--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ header .icons img {
 }
 
 .hero-section {
-    background: url('fondo.png') no-repeat center center/cover;
+    background: url('logo.png') no-repeat center center/cover;
     height: 80vh;
     display: flex;
     justify-content: center;
