--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos Globales */
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +11,7 @@ body {
     color: #333;
 }
 
+/* Estilos del Header */
 header {
     display: flex;
     justify-content: space-between;
@@ -44,7 +46,8 @@ header .icons img {
     width: 20px;
     margin-left: 20px;
 }
-/* Estilo del carrito */
+
+/* Estilos del Carrito */
 .cart-container {
     display: none; /* Inicialmente oculto */
     position: fixed;
@@ -55,20 +58,18 @@ header .icons img {
     height: 100%;
     box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
+    z-index: 1000; /* Asegura que el carrito esté encima de otros elementos */
 }
 
 .cart-container ul {
     list-style-type: none;
     padding: 0;
+    overflow-y: auto; /* Permite el desplazamiento si la lista es grande */
+    height: calc(100% - 60px); /* Ajusta el alto para que se pueda desplazar la lista */
 }
 
 .cart-container li {
     margin-bottom: 10px;
-}
-
-#cart-list {
-    overflow-y: auto;
-    height: 80%;
 }
 
 #close-cart-button {
@@ -84,6 +85,27 @@ header .icons img {
     background-color: #005cbf;
 }
 
+/* Estilos del Icono del Carrito */
+.cart-icon {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+
+.cart-icon span {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: #ff5733;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 3px 6px;
+    border-radius: 50%;
+}
+
+/* Estilos de la Sección Hero */
 .hero-section {
     background: url('fondo.png') no-repeat center center/cover;
     height: 80vh;
@@ -115,6 +137,7 @@ header .icons img {
     background-color: #005cbf;
 }
 
+/* Estilos de la Sección de Productos */
 .products-section {
     padding: 50px 20px;
     text-align: center;
@@ -159,6 +182,7 @@ header .icons img {
     background-color: #005cbf;
 }
 
+/* Estilos de la Sección de Ofertas */
 .offers-section {
     background-color: #111;
     color: #fff;
@@ -178,6 +202,7 @@ header .icons img {
     color: #ff5733;
 }
 
+/* Estilos de la Sección de Reseñas */
 .reviews-section, .blog-section {
     padding: 50px 20px;
     text-align: center;
@@ -195,6 +220,7 @@ header .icons img {
     border-radius: 50%;
 }
 
+/* Estilos del Footer */
 footer {
     background-color: #111;
     color: #fff;
